--- a/app/assets/stylesheets/plutus/application.css
+++ b/app/assets/stylesheets/plutus/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require bootstrap.min
  *= require bootstrap-theme.min
- *= require jquery-ui/widgets/datepicker
+ *= require jquery-ui/datepicker
  *= require_self
  */
 body { padding-top: 60px; }
