--- a/app/views/layouts/plutus/_navigation.html.erb
+++ b/app/views/layouts/plutus/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">&nbsp;Plutus</a>
+      <%= link_to("return to households", "/households/#{params[:household_id]}") %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
