--- a/app/views/layouts/plutus/_navigation_links.html.erb
+++ b/app/views/layouts/plutus/_navigation_links.html.erb
@@ -1,5 +1,12 @@
-<%# add navigation links to this file %>
-<li><%= link_to "Balance Sheet", reports_balance_sheet_path%></li>
-<li><%= link_to "Income Statement", reports_income_statement_path%></li>
-<li><%= link_to "General Ledger", accounts_path%></li>
-<li><%= link_to "Journal", entries_path%></li>
+<li>
+  <%= link_to "Balance Sheet", "/households/#{params[:household_id]}/reports/balance_sheet" %>
+</li>
+<li>
+  <%= link_to "Income Statement", "/households/#{params[:household_id]}/reports/income_statement" %>
+</li>
+<li>
+  <%= link_to "General Ledger", "/households/#{params[:household_id]}/accounts" %>
+</li>
+<li>
+  <%= link_to "Journal", "/households/#{params[:household_id]}/entries" %>
+</li>
